--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vite-template",
+  "name": "hw18",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vtemplate/",
+    "build": "vite build --base=/hw18/",
     "preview": "vite preview"
   },
   "devDependencies": {
